PROD/grafana_deployment/grafana-deployment.yaml
# --- Deployment ---
# Manages the Pods running your application container.
apiVersion: apps/v1
kind: Deployment
metadata:
  # name: A unique name for your Deployment.
  name: grafana-deployment
  namespace: default
  labels:
    app: grafana
spec:
  replicas: 1 # Move to 1 replica since SQLite DB cannot handle multiple instances. Need to move to another DB if multiple replicas are ran.
  revisionHistoryLimit: 2  # Max number of replicasets
  selector:
    # Must match the labels on the Pod template below.
    matchLabels:
      app: grafana
  template:
    metadata:
      # Labels applied to the Pods created by this Deployment. Must match spec.selector.matchLabels.
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:13.1.1 # updated (7/23/26)
        ports:
        - containerPort: 3000 # The port your application listens on INSIDE the container (e.g., 8080)
          name: grafana-http # Optional name for the port
        # volumeMounts: Mounts the volume requested by the PVC into the container.
        volumeMounts:
        - name: app-data # Must match the volume name defined below in spec.volumes
          # mountPath: The directory path inside the container where the storage will be accessible.
          mountPath: /app/data # e.g., /app/data or /var/www/html
        # --- Optional but Recommended ---
        resources:
          requests:
            memory: "64Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "1000m"
         # env:  <-- We'll use this to configure Grafana's data path
      volumes:
      # - name: Must match the name used in volumeMounts above.
      - name: app-data # e.g., app-data
        # persistentVolumeClaim: Links this volume definition to the PVC created earlier.
        persistentVolumeClaim:
          # claimName: Must match the metadata.name of the PVC defined above.
          claimName: grafana-pvc
